# Salieri

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  compile_commands.json  key.sh  package-lock.json  package.json  requirements.txt  rl_model.ipynb
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.svelte  main.ts  vite-env.d.ts
dashboard/src/styling/: app.css  index.css
documentation/: http_architecture.md  http_guide.md  machine_learning.md
engine/: debug.h  handler.cpp  handler.h  http.h  main.cpp  mputil.cpp  mputil.h  net_common.h  networking.cpp  networking.h  server.cpp  server.h  session_manager.h
engine/include/: debug.h  http.h  mputil.h  net_common.h  server.h  session_manager.h
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
fastapi/: database.py  main.py  models.py  old_main.py  old_models.py
main/: actor_critic.py  agent.py  atari_agent.py  corippling_network.py  double_dqn.py  experimental.py  gym_env.py  main.py  models.py  network.py  ppo.py  replay_memory.py  rl_model.ipynb  sac_v2.py  server.py  soft_ac.py  spatial_nav_agent.py  template.py
main/gym/: target_tracking.py
main/save/: 259_Optim_RBX.pth  259_Policy_RBX.pth  259_Target_RBX.pth  61_Optim_RBX.pth  61_Policy_RBX.pth  61_Target_RBX.pth  9_Optim_RBX.pth  9_Policy_RBX.pth  9_Target_RBX.pth
main/save/a2c/: 226_Optim_RBX.pth  226_Policy_RBX.pth  260_Optim_RBX.pth  260_Policy_RBX.pth  29_Optim_RBX.pth  29_Policy_RBX.pth  3_Optim_RBX.pth  3_Policy_RBX.pth  6_Optim_RBX.pth  6_Policy_RBX.pth  metadata.json
main/save/double_dqn/: 23_Optim_RBX.pth  23_Policy_RBX.pth  23_Target_RBX.pth  5_Optim_RBX.pth  5_Policy_RBX.pth  5_Target_RBX.pth
main/save/graveyard4code/: actor_critic.py  double_dqn.py  soft_ac.py
main/save/sac/: checkpoint_155.pth  checkpoint_30.pth  checkpoint_35.pth  checkpoint_40.pth
main/util/: Init.luau
reinforcement_learning/: gym_env.py  models.py  rl_model.ipynb
rl/: data.csv  main.py  sac_nn.py  sac_nn2.py  soft_ac.py
src/: App.tsx
